examples/test/testpolicy6437.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6437
  namespace: namespace129
spec:
  podSelector:
    matchLabels:
      key21: value48
      key35: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value44
          key11: value5
      podSelector:
        matchLabels:
          key25: value14
